# opengl-quickstart

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: INSTALL.md
include/Core/: Application.h  Camera.h  InputHandler.h
include/Graphics/: Light.h  Object.h  Renderer.h
include/Utils/: MathUtils.h
scripts/: build.sh  install.sh  setup_dependencies.sh
src/: main.cpp
src/Core/: Application.cpp  Camera.cpp  InputHandler.cpp
src/Graphics/: Light.cpp  Object.cpp  Renderer.cpp
